--- a/aboutme.css
+++ b/aboutme.css
@@ -1,4 +1,11 @@
 
+        h1{
+            font-size: 50px;
+            font-weight: bolder;
+            font-family: 'Gill Sans';
+            margin-bottom: 20px;
+            text-align: center;
+        }
         body {
             font-family: 'Gill Sans';
             font-size: larger;
