--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+    /* Body Styles */
         h1{
             font-size: 50px;
             font-weight: bolder;
@@ -27,6 +28,8 @@
         .timeline {
             text-align: left; 
         }
+
+        /* Button Styles */
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -39,6 +42,17 @@
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #0056b3; 
+            background-color: grey; 
         }
     
+        /* Mobile Phone Style */
+        @media screen and (max-width: 480px) {
+            body {
+              font-size: medium; 
+            }
+          
+            h1 {
+              font-size: 30px; 
+            }
+          
+          }
