--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
 
-/* Header Style  */
+/* Header */
 h1 {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bolder;
     font-family: 'Gill Sans';
 }
 
-/* Body Style */
+h2 {
+    font-family: 'Great Vibes', cursive;
+      font-size: 1.5em;
+    color: #333;
+    text-align: center;
+    margin: 20px 0;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+
+/* Body */
 body {
   font-family: 'Gill Sans', sans-serif;
   font-size: larger;
@@ -23,6 +41,8 @@ body {
   min-height: 100vh;
 }
 
+
+/* Content */
 .content-wrapper {
   width: 80%;
   max-width: 960px;
@@ -46,40 +66,19 @@ h1 {
 
 .image-container img {
     max-width: 200px;
-    /* Set max-width here */
     height: auto;
-    /* Maintain aspect ratio */
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: block;
     margin: 0 auto;
 }
-
-
-h2 {
-    font-family: 'Great Vibes', cursive;
-      font-size: 1.5em;
-    color: #333;
-    text-align: center;
-    margin: 20px 0;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    letter-spacing: 1px;
-}
-
-h3 {
-    font-size: 1.5em;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    color: #333;
-}
-
 .caption {
     font-style: italic;
     color: #666;
     line-height: 1.6;
     margin-bottom: 20px;
     text-align: justify;
-    /* Justify the caption text */
+    
 }
 
 .timeline {
@@ -141,7 +140,7 @@ h3 {
 
 
 
-/* Link Buttons Style */
+/* Link Buttons  */
 .link-buttons {
     display: inline-block;
     background-color: transparent;
@@ -168,7 +167,7 @@ h3 {
 }
 
 /* Mobile Responsive Styles */
-@media (max-width: 768px) { /* Adjust breakpoint as needed */
+@media (max-width: 768px) {
   .content-wrapper {
       width: 90%;
       padding: 20px;
